--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ferronix"
+name = "titanix"
 version = "0.1.1"
 edition = "2021"
 authors = ["Tyler Harpool <tylerharpool@gmail.com>"]
